# cs_ml

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile
app/src/: main.py
app/src/configs/: settings.py
app/src/routers/: __init__.py  ml.py
clickhouse/migrations/: 0001_create_game_statistic_flatten_table.sql
