[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
force_sort_within_sections = true

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
follow_imports = "silent"

[tool.poetry]
name = "cs"
version = "0.1.0"
description = ""
authors = ["Sergey Bilibin"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
asynch = "^0.2.5"
uvicorn = "^0.33.0"
gunicorn = "^23.0.0"
catboost = "^1.2.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
toml-sort = "^0.24.2"
mypy = "^1.13.0"
flake8-pyproject = "^1.2.3"
